Fix image size on mobile

--- a/style/tailwind.css
+++ b/style/tailwind.css
@@ -559,12 +559,12 @@ video {
   height: 5rem;
 }
 
-.h-8 {
-  height: 2rem;
+.h-72 {
+  height: 18rem;
 }
 
-.h-\[calc\(100vh-8rem\)\] {
-  height: calc(100vh - 8rem);
+.h-8 {
+  height: 2rem;
 }
 
 .w-btn-width {
@@ -645,4 +645,10 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1024px) {
+  .lg\:h-\[calc\(100vh-8rem\)\] {
+    height: calc(100vh - 8rem);
+  }
 }
